# Open-Ollama-RAG-ChatApp

./: .gitignore  RAG-App-Notebook.ipynb  README.md  benchmark.py  benchmark_results_20250416_135942.json  benchmark_results_jfk_files.json  benchmark_results_literature.json  benchmark_results_math.json  benchmark_results_science.json  fixed_main.py  isolated_test.py  main.py  mini_test.py  pyproject.toml  requirements.txt  simple_test.py  test_and_fix_db.py  test_main_function.py  test_standalone.py  test_vector_db.py
db/: chroma.sqlite3
src/: __init__.py  app.py  chat.py  config.py  document_processor.py  main.py  update_db.py  vector_db.py
tests/: __init__.py  conftest.py  monkey_patch.py  patch_onnx.py  patch_onnx_direct.py  test_chat.py  test_direct_query.py  test_document_processor.py  test_document_tracker.py  test_query.py  test_vector_db.py
