[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ollama-rag-chat"
version = "0.1.0"
description = "A chat application using Ollama and RAG for document retrieval"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.1.0"
langchain-community = "^0.0.16"
chromadb = "^0.4.22"
gradio = "^4.16.0"
pydantic = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
