[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ollama-rag-chat"
version = "0.1.0"
description = "A chat application using Ollama and RAG for document retrieval"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
langchain = "^0.1.4"
langchain-community = "^0.0.16"
chromadb = "^0.4.24"
ollama = "^0.1.7"
gradio = "^4.20.1"
langchain-core = "^0.1.19"
pydantic = ">=2.0,<2.6"
pytest = "^8.3.5"
ruff = "^0.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
filterwarnings = [
    "ignore::UserWarning:onnxruntime.*:",
    "ignore::DeprecationWarning:importlib.*:",
    "ignore::DeprecationWarning:google.*:"
]
